--- a/client/src/app/shared/components/switch/switch.component.html
+++ b/client/src/app/shared/components/switch/switch.component.html
@@ -1,3 +1,6 @@
+@if (label()) {
+  <p>{{ label() }}</p>
+}
 <div class="switch" [ngClass]="{ on: isChecked() }" (click)="toggle()">
   <div class="handle">
     @if (isChecked()) {
