Handle validation logic gracefully via validation service

--- a/client/src/app/shared/components/button/button.component.html
+++ b/client/src/app/shared/components/button/button.component.html
@@ -1,5 +1,6 @@
 <button
   class="btn"
+  [disabled]="disabled()"
   [ngClass]="{
     'btn-primary': variant() === 'PRIMARY',
     'btn-secondary': variant() === 'SECONDARY',
