--- a/client/src/app/shared/components/modal/modal.component.html
+++ b/client/src/app/shared/components/modal/modal.component.html
@@ -28,6 +28,7 @@
           <app-button
             [variant]="buttonVariant"
             [textContent]="buttonText"
+            [disabled]="isPrimaryButtonDisabled()"
             (clicked)="confirm()"
             [isLoading]="isLoading()"
           />
