Add validation for correct training frequency

--- a/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
@@ -22,3 +22,7 @@
     </div>
   }
 </div>
+
+@if (!isSelectionValid()) {
+  <p class="error-message">Trainingsplan muss mindestens 2 Trainingtage haben</p>
+}
