--- a/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.scss
+++ b/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.scss
@@ -59,3 +59,9 @@
   display: grid;
   place-items: center;
 }
+
+.error-message {
+  transform: translateY(-5px);
+  color: var(--error-color);
+  font-size: 0.9em;
+}
