--- a/client/src/app/shared/components/slider/slider.component.html
+++ b/client/src/app/shared/components/slider/slider.component.html
@@ -1,4 +1,5 @@
-<div class="slider-track">
-  <div class="slider-thumb" [style.height.%]="value()"></div>
-</div>
-<input type="range" orient="vertical" min="0" max="100" [(ngModel)]="value" />
+<input #slider type="range" min="min()" max="max()" [(ngModel)]="value" class="slider" />
+
+@if (showNumericValue()) {
+  <p>Ausgewählter Wert: {{ value() }}</p>
+}
