--- a/client/src/app/shared/components/slider/slider.component.scss
+++ b/client/src/app/shared/components/slider/slider.component.scss
@@ -1,71 +1,46 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50px;
-  height: 200px;
-  position: relative;
-  background-color: #3c3a45;
-  border-radius: 8px;
-  overflow: hidden;
+  width: 100%;
 }
 
-.slider-track {
+/* Slider-Styling */
+.slider {
+  -webkit-appearance: none;
   width: 100%;
-  height: 100%;
-  background-color: var(--accent-hover-color, #605d6c);
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.slider-thumb {
-  width: 100%;
-  background-color: var(--accent-color, #a78bfa);
-  position: absolute;
-  bottom: 0;
-  transition: height 0.3s ease;
-}
-
-input[type='range'] {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  transform: rotate(-90deg) translateX(-50%);
-  transform-origin: center;
-  background: transparent;
-  appearance: none;
-  cursor: pointer;
-  z-index: 2;
+  height: 8px;
+  border-radius: 4px;
+  background: linear-gradient(to right, var(--accent-color) 50%, /* Anfang bis zur Hälfte */ #dddddd 50%);
   outline: none;
+  transition: background 0.3s ease;
+  cursor: pointer;
 }
 
-input[type='range']::-webkit-slider-thumb {
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
   appearance: none;
   width: 20px;
   height: 20px;
-  background: var(--accent-color, #a78bfa);
-  border: none;
   border-radius: 50%;
+  background: white; /* Innerer weißer Kreis */
+  border: 2px solid var(--accent-color); /* Lila Rand */
   cursor: pointer;
+  transition: transform 0.2s ease;
+}
+.slider::-webkit-slider-thumb:active {
+  transform: scale(1.1);
 }
 
-input[type='range']::-moz-range-thumb {
+/* Thumb für Firefox */
+.slider::-moz-range-thumb {
   width: 20px;
   height: 20px;
-  background: var(--accent-color, #a78bfa);
-  border: none;
   border-radius: 50%;
+  background: white; /* Innerer weißer Kreis */
+  border: 2px solid var(--accent-color); /* Lila Rand */
   cursor: pointer;
+  transition: transform 0.2s ease;
 }
 
-input[type='range']::-ms-thumb {
-  width: 20px;
-  height: 20px;
-  background: var(--accent-color, #a78bfa);
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
+.slider::-moz-range-thumb:active {
+  background: var(--accent-button-color-active);
+  transform: scale(1.1);
 }
