Add automatic training title suggestions

--- a/client/src/app/features/training-plans/training-plans/edit-training/edit-training.component.html
+++ b/client/src/app/features/training-plans/training-plans/edit-training/edit-training.component.html
@@ -6,6 +6,8 @@
   [required]="true"
   [validationPattern]="'^(?!\s*$).+'"
   [validationErrorMessage]="'Titel ist erforderlich'"
+  [icon]="IconName.REFRESH_CW"
+  (iconClicked)="makeTrainingPlanTitleSuggestion()"
   [isTouched]="markInputFieldsAsTouched()"
 />
 
