--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -295,6 +295,11 @@
       <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
       <polyline points="22 4 12 14.01 9 11.01"></polyline>
     }
+    @case (IconName.REFRESH_CW) {
+      <polyline points="23 4 23 10 17 10"></polyline>
+      <polyline points="1 20 1 14 7 14"></polyline>
+      <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
+    }
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
     }
