--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -14,6 +14,9 @@
   --error-color: #e63946;
   --element-background: rgb(247, 247, 247);
 
+  --calendar-border-color: #e0e0e0;
+  --calendar-hover-color: #f9f9f9;
+
   --off-white: #fdfdfd;
 
   --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
