--- a/client/src/app/features/testFeatures/test-features.component.html
+++ b/client/src/app/features/testFeatures/test-features.component.html
@@ -9,7 +9,7 @@
   <div class="day-name">MAX</div>
   <div class="day-name">Notes</div>
 
-  @for (n of [1, 2, 3, 4]; track n) {
+  @for (exercise of numberOfExercises(); track exercise) {
     @for (k of [1, 2, 3, 4, 5, 6, 7, 8, 9]; track k) {
       <div class="day">
         <input class="transparent-input" />
@@ -18,4 +18,4 @@
   }
 </div>
 
-<button class="add-row-btn" (click)="addRow()">+</button>
+<app-add-row-button (addRow)="addRow()" (removeRow)="removeRow()" />
