--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -104,7 +104,12 @@ textarea.form-control {
   width: 100%;
 
   text-align: center;
+
+  &.left-aligned {
+    text-align: left;
+  }
 }
+
 .transparent-input:focus {
   border: none;
   outline: none;
