Add basic navigation arrows component + adjust layout for it

--- a/client/src/app/features/training-view-2/training-view-2.component.html
+++ b/client/src/app/features/training-view-2/training-view-2.component.html
@@ -15,3 +15,8 @@
 </div>
 
 <app-add-row-button [isVisible]="showAddRowButton()" (addRow)="addRow()" (removeRow)="removeRow()" />
+@if (!showAddRowButton()) {
+  <div class="placeholder-for-add-button"></div>
+}
+
+<app-navigation-arrows />
