Reset all exercises to default when placeholder category is set

--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
@@ -43,7 +43,14 @@
   />
 </div>
 <div class="exercise-field">
-  <input type="text" class="transparent-input" [(ngModel)]="exercise().weight" />
+  <input
+    type="text"
+    class="transparent-input"
+    [(ngModel)]="exercise().weight"
+    [ngStyle]="{
+      opacity: exercise().category === '- Bitte Auswählen -' ? 0 : 1,
+    }"
+  />
 </div>
 <div class="exercise-field">
   <input
@@ -57,7 +64,14 @@
   />
 </div>
 <div class="exercise-field">
-  <input type="text" class="transparent-input" [(ngModel)]="exercise().actualRPE" />
+  <input
+    type="text"
+    class="transparent-input"
+    [(ngModel)]="exercise().actualRPE"
+    [ngStyle]="{
+      opacity: exercise().category === '- Bitte Auswählen -' ? 0 : 1,
+    }"
+  />
 </div>
 <div class="exercise-field">
   <input
