--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
@@ -48,7 +48,7 @@
     class="transparent-input"
     [(ngModel)]="exercise().weight"
     [ngStyle]="{
-      opacity: exercise().category === '- Bitte Auswählen -' ? 0 : 1,
+      opacity: exercise().category === '- Bitte Auswählen -' || exercise().weight === '0' ? 0 : 1,
     }"
   />
 </div>
@@ -69,7 +69,7 @@
     class="transparent-input"
     [(ngModel)]="exercise().actualRPE"
     [ngStyle]="{
-      opacity: exercise().category === '- Bitte Auswählen -' ? 0 : 1,
+      opacity: exercise().actualRPE === '0' ? 0 : 1,
     }"
   />
 </div>
@@ -80,7 +80,7 @@
     [(ngModel)]="exercise().estMax"
     (ngModelChange)="updateExerciseProperty('estMax', $event)"
     [ngStyle]="{
-      opacity: exercise().category === '- Bitte Auswählen -' ? 0 : 1,
+      opacity: exercise().estMax === 0 ? 0 : 1,
     }"
   />
 </div>
