Implement fully functional abstract wrapper for double click

--- a/client/src/app/features/training-view-2/inputs/weight/weight-input.component.html
+++ b/client/src/app/features/training-view-2/inputs/weight/weight-input.component.html
@@ -1,7 +1,1 @@
-<input
-  type="text"
-  class="transparent-input"
-  [value]="weight()"
-  (change)="onWeightChanged($event)"
-  (dblclick)="onDoubleClick()"
-/>
+<input type="text" class="transparent-input" [value]="weight()" (change)="onWeightChanged($event)" />
