Add rpe input directive

--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
@@ -60,16 +60,10 @@
   />
 </div>
 <div class="exercise-field">
-  <input
-    type="text"
-    rpeInputDirective2
+  <app-rpe-input
+    [(rpe)]="exercise().actualRPE"
     [numberOfSets]="exercise().sets"
-    class="transparent-input"
-    [(ngModel)]="exercise().actualRPE"
-    (ngModelChange)="onAcutalRpeChange($event)"
-    [ngStyle]="{
-      opacity: exercise().actualRPE === '0' ? 0 : 1,
-    }"
+    (rpeChanged)="onAcutalRpeChange($event)"
   />
 </div>
 <div class="exercise-field">
