--- a/client/src/app/features/training-view-2/inputs/weight/weight-input.component.html
+++ b/client/src/app/features/training-view-2/inputs/weight/weight-input.component.html
@@ -1,1 +1,1 @@
-<input type="text" class="transparent-input" [value]="weight()" (change)="onWeightChanged($event)" />
+<input type="tel" class="transparent-input" [value]="weight() || ''" (change)="onWeightChanged($event)" />
