Add target rpe directive

--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
@@ -52,6 +52,7 @@
   <input
     type="number"
     class="transparent-input"
+    targetRPE
     [(ngModel)]="exercise().targetRPE"
     (ngModelChange)="updateExerciseProperty('targetRPE', $event)"
     [ngStyle]="{
