--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.scss
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.scss
@@ -23,3 +23,11 @@
   text-align: left;
   padding-left: 10px;
 }
+
+// TODO: hier irgendwie so das mobile design tackeln
+/* @media screen and (max-width: 768px) {
+  :host {
+    display: grid;
+  }
+}
+ */
