--- a/client/src/app/shared/components/dropdown/dropdown.component.html
+++ b/client/src/app/shared/components/dropdown/dropdown.component.html
@@ -1,6 +1,12 @@
 @switch (directiveUsed()) {
   @case ('interactiveElementDirective') {
-    <select [name]="name()" (change)="onChange($event)" class="transparent-input" appInteractiveElement>
+    <select
+      [disabled]="disabled()"
+      [name]="name()"
+      (change)="onChange($event)"
+      class="transparent-input"
+      appInteractiveElement
+    >
       @for (option of options(); track option; let index = $index) {
         <option [value]="option" [selected]="option === selectedValue()">
           {{ option | determineSelectOptionValue: optionLabels() : index }}
@@ -10,7 +16,13 @@
   }
 
   @case ('category-select') {
-    <select [name]="name()" (change)="onChange($event)" class="transparent-input" category-select>
+    <select
+      [disabled]="disabled()"
+      [name]="name()"
+      (change)="onChange($event)"
+      class="transparent-input"
+      category-select
+    >
       @for (option of options(); track option; let index = $index) {
         <option [value]="option" [selected]="option === selectedValue()">
           {{ option | determineSelectOptionValue: optionLabels() : index }}
